style: fix word break in event card

--- a/src/app/features/event/event-card/event-card.component.scss
+++ b/src/app/features/event/event-card/event-card.component.scss
@@ -14,6 +14,8 @@
     display: flex;
     gap: 16px;
     padding: 8px;
+    word-break: break-word;
+    hyphens: auto;
   }
   &__details {
     display: flex;
